# duphunter

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/dupcore/: Cargo.toml
crates/dupcore/src/: actions.rs  cache.rs  control.rs  discovery.rs  error.rs  export.rs  hashing.rs  identity.rs  lib.rs  manifest.rs  model.rs  pipeline.rs  video.rs
crates/dupcore/tests/: actions_tests.rs  pipeline_tests.rs  video_tests.rs
scripts/: generate-icon.mjs
src/: App.tsx  api.ts  store.ts  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionDialog.tsx  PreviewPane.tsx  SetCard.tsx  TitleBar.tsx
src/screens/: Results.tsx  ScanSetup.tsx  ScanningDashboard.tsx
src/test/: App.test.tsx  setup.ts
